[package]
name = "xero-welcome"
version = "0.1.0"
edition = "2021"
description = "XeroLinux Live Welcome Application"
authors = ["XeroLinux"]
license = "GPL-3.0"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_4"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
